--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,34 @@ apply plugin: 'java'
 
 sourceCompatibility = 1.8
 
+buildscript {
+    repositories {
+        mavenLocal()
+        mavenCentral()
+        jcenter()
+    }
+    dependencies {
+        classpath "com.github.jengelman.gradle.plugins:shadow:2.0.1"
+    }
+}
+
+apply plugin: 'com.github.johnrengelman.shadow'
+
+shadowJar {
+    baseName = 'uchain'
+    version = '1.0-SNAPSHOT'
+    transform(com.github.jengelman.gradle.plugins.shadow.transformers.AppendingTransformer) {
+        resource = 'reference.conf'
+    }
+}
+
 repositories {
     mavenCentral()
-    mavenLocal()
+
+
+    maven { url "https://oss.jfrog.org/libs-snapshot/" }
+    maven { url "https://dl.bintray.com/ethereum/maven/" }
+    maven { url "https://repo.spring.io/libs-snapshot" }
 }
 
 configurations.all {
@@ -21,28 +46,47 @@ configurations {
 
 
     dependencies {
-
         compile "org.slf4j:slf4j-api:1.8.0-beta1"
-	    compile "org.slf4j:slf4j-log4j12:1.8.0-beta1"
-	    compile "log4j:log4j:1.2.17"
+        compile "org.slf4j:slf4j-log4j12:1.8.0-beta1"
+        compile "log4j:log4j:1.2.17"
         compile group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.59'
 
+        compile "org.functionaljava:functionaljava:4.6"
+        compile "org.functionaljava:functionaljava-java8:4.6"
 
-        testCompile group: 'junit', name: 'junit', version: '4.12'
+        compile group: 'org.ethereum', name: 'solcJ-all', version: '0.4.25'
+
+        compile "javax.servlet:javax.servlet-api:3.1-b07"
+
+        compile "com.mashape.unirest:unirest-java:1.3.1"
+
+        compile "org.apache.commons:commons-io:1.3.2"
+
+        compile group: 'net.sourceforge.argparse4j', name: 'argparse4j', version: '0.8.1'
+
+        testCompile "junit:junit"
+        testCompile group: 'org.mockito', name: 'mockito-all', version: '1.8.5'
+
+        compile group: 'commons-net', name: 'commons-net', version: '3.3'
 
         compile group: 'org.projectlombok', name: 'lombok', version: '1.18.2'
         compile "org.bitlet:weupnp:0.1.4"
         compile "com.typesafe.akka:akka-actor_2.12:2.5.12"
-	    compile "com.typesafe.akka:akka-http-core_2.12:10.1.0"
-	    compile "ch.megard:akka-http-cors_2.12:0.2.2"
-	    compile group: 'de.heikoseeberger', name: 'akka-http-circe_2.12', version: '1.21.0'
-	    compile group: 'org.projectlombok', name: 'lombok', version: '1.18.0'
-	    
-	    compile group: 'org.iq80.leveldb', name: 'leveldb', version: '0.10'
+        compile "com.typesafe.akka:akka-http-core_2.12:10.1.0"
+        compile "ch.megard:akka-http-cors_2.12:0.2.2"
+        compile group: 'de.heikoseeberger', name: 'akka-http-circe_2.12', version: '1.21.0'
+        compile group: 'org.projectlombok', name: 'lombok', version: '1.18.0'
+
+        compile group: 'org.iq80.leveldb', name: 'leveldb', version: '0.10'
         compile group: 'org.iq80.leveldb', name: 'leveldb-api', version: '0.10'
         compile group: 'org.fusesource.leveldbjni', name: 'leveldbjni-all', version: '1.8'
-        compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.1'
+        compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.7'
+        compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.7'
+        compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.7'
         compile 'net.sf.json-lib:json-lib:2.4:jdk15'
+        compile group: 'org.rocksdb', name: 'rocksdbjni', version: '5.5.1'
+
+        compile group: 'com.typesafe.play', name: 'play-json_2.12', version: '2.7.0-M1'
 
         compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-servlet', version: '2.20'
         compile group: 'org.glassfish.jersey.core', name: 'jersey-server', version: '2.20'
@@ -50,6 +94,18 @@ configurations {
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.3.5'
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.3.5'
         compile group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-json-provider', version: '2.3.5'
+
+        compile "com.madgag.spongycastle:core:1.58.0.0" // for SHA3 and SECP256K1
+        compile "com.madgag.spongycastle:prov:1.58.0.0" // for SHA3 and SECP256K1
+        compile "org.apache.commons:commons-collections4:4.0"
+        compile "commons-codec:commons-codec:1.10"
+        compile "com.cedarsoftware:java-util:1.8.0" // for deep equals
+        compile "org.springframework:spring-context:4.3.19.RELEASE"
+        compile "com.googlecode.concurrent-locks:concurrent-locks:1.0.0"
+        compile "org.apache.commons:commons-lang3:3.4"
+
+        compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.9.0'
+        compile 'org.mongodb:mongodb-driver-reactivestreams:1.10.0'
     }
 
 }
@@ -57,11 +113,13 @@ configurations {
 
 jar {
     String someString = ''
-    configurations.runtime.each {someString = someString + " lib\\"+it.name}
+    configurations.runtime.each {someString = someString + "lib/"+it.name}
 
     manifest {
         attributes 'Main-Class': 'com.uchain.Main'
         attributes 'Class-Path': someString
+        attributes 'Implementation-Title': 'uchain'
+        attributes 'Implementation-Version': version
     }
 }
 
@@ -69,6 +127,7 @@ task run(type: JavaExec, dependsOn: classes) {
     main = 'Main'
     classpath sourceSets.main.runtimeClasspath
     classpath configurations.runtime
+    jvmArgs = ["-Xss8m", "-Xmx3G"]
 }
 
 task copyJar(type: Copy){
@@ -79,4 +138,11 @@ task copyJar(type: Copy){
 task release(type: Copy,dependsOn: [build,copyJar]) {
     from  'conf'
     into ('build/libs/conf')
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+    options.bootClasspath = "$System.env.JAVA_HOME/jre/lib/rt.jar"
+    options.bootClasspath += "$File.pathSeparator$System.env.JAVA_HOME/jre/lib/jce.jar"
+    options.bootClasspath += "$File.pathSeparator$System.env.JAVA_HOME/jre/lib/jsse.jar"
 }
